tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__random__test__emit_random_codegen@llvm14_2.snap
---
source: tket2-hseries/src/llvm/random.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { double, {} } @_hl.main.1({} %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %rfloat = call double @random_float()
  %mrv = insertvalue { double, {} } undef, double %rfloat, 0
  %mrv6 = insertvalue { double, {} } %mrv, {} zeroinitializer, 1
  ret { double, {} } %mrv6
}

declare double @random_float()
